@@ -24,6 +24,7 @@ Version *.* - ,**********, by Shigio Yamaguchi
 
 * DJGPP support added.
 * global,gtags: the -q option added.
+* htags: fill anchors into path name.
 
 Version 4.2 - Nov 24 2001, by Shigio Yamaguchi
 
